--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     const root = document.getElementById('root');
     function App() {
         const [counter, setCounter] = React.useState(0);
-        
-        return (<button>click Me!</button>)
+        const onClick = () => {
+            setCounter(counter+1);
+        }
+        return (
+            <div>
+                <h3>Total clicks: {counter}</h3>
+                <button onClick = {onClick}>click Me!</button>
+            </div>
+            )
     }
     ReactDOM.render(<App />, root);
 </script>
