--- a/index.html
+++ b/index.html
@@ -1,26 +1,82 @@
 <!DOCTYPE html>
 <html>
-
-<body>
+  <body>
     <div id="root"></div>
-</body>
-<script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script type="text/babel">
-    const root = document.getElementById('root');
-    function App() {
-        const [counter, setCounter] = React.useState(0);
-        const onClick = () => {
-            setCounter(counter+1);
-        }
-        return (
-            <div>
-                <h3>Total clicks: {counter}</h3>
-                <button onClick = {onClick}>click Me!</button>
-            </div>
-            )
+  </body>
+  <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
+    function MinutesToHours() {
+      const [amount, setAmount] = React.useState();
+      const [flipped, setFlipped] = React.useState(false);
+      const onChange = () => {
+        setAmount(event.target.value);
+      };
+      const reset = () => {
+        setAmount(0);
+      }
+      const onFlip = () =>{
+        setFlipped((c) => !c);
+        reset();
+      }
+
+      return (
+        <div>
+          <label htmlFor="minutes">minutes</label>
+          <input
+            value={flipped ? amount * 60 : amount}
+            id="minutes"
+            placeholder="Minutes"
+            type="number"
+            onChange={onChange}
+            disabled={flipped}
+          />
+          <br />
+          <label htmlFor="hours">hours</label>
+          <input
+            value={flipped ? amount : Math.round(amount / 60)}
+            id="hours"
+            placeholder="Hours"
+            type="number"
+            onChange={onChange}
+            disabled={!flipped}
+          />
+          <div>
+            <button onClick={reset}>reset</button>
+            <button onClick={onFlip}>Filp</button>
+          </div>
+        </div>
+      );
     }
+    function KmToMiles() {
+      return (
+        <div>
+
+        </div>
+      );
+    }
+    function App() {
+        const [index, setIndex] = React.useState("xx");
+        const onSelect = (event) => {
+            setIndex(event.target.value);
+        }
+      return (
+        <div>
+          <h1>Converter</h1>
+          <select value={index} onChange={onSelect}>
+            <option value="xx">Select your units!</option>
+            <option value="0">Minutes & Hours</option>
+            <option value="1">KM & Miles</option>
+          </select>
+          <hr />
+          {index === "xx" ? "Please select units" : null}
+          {index === "0" ? <MinutesToHours /> : null}
+          {index === "1" ? <KmToMiles /> : null}
+        </div>
+      );
+    }
+    const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
-</script>
+  </script>
 </html>
