--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       };
       const reset = () => {
         setAmount(0);
-      }
-      const onFlip = () =>{
+      };
+      const onFlip = () => {
         setFlipped((c) => !c);
         reset();
-      }
+      };
 
       return (
         <div>
@@ -50,24 +50,55 @@
       );
     }
     function KmToMiles() {
+      const [amount, setAmount] = React.useState();
+      const [flipped, setFlip] = React.useState(false);
+      const onChange = (event) => {
+        setAmount(event.target.value);
+      };
+      const reset = () => setAmount(0);
+      const flip = () => {
+        setFlip((c) => !c);
+        reset();
+      };
       return (
         <div>
-
+          <label htmlFor="Km">Km</label>
+          <input
+            value={flipped ? amount * 1.609 : amount}
+            id="Km"
+            type="number"
+            placeholder="Km"
+            onChange={onChange}
+            disabled={flipped}
+          />
+          <br />
+          <label htmlFor="Miles">Miles</label>
+          <input
+            value={flipped ? amount : amount / 1.609}
+            id="Miles"
+            type="number"
+            placeholder="Miles"
+            onChange={onChange}
+            disabled={!flipped}
+          />
+          <br />
+          <button onClick={reset}>reset</button>
+          <button onClick={flip}>flip</button>
         </div>
       );
     }
     function App() {
-        const [index, setIndex] = React.useState("xx");
-        const onSelect = (event) => {
-            setIndex(event.target.value);
-        }
+      const [index, setIndex] = React.useState("xx");
+      const onSelect = (event) => {
+        setIndex(event.target.value);
+      };
       return (
         <div>
           <h1>Converter</h1>
           <select value={index} onChange={onSelect}>
             <option value="xx">Select your units!</option>
             <option value="0">Minutes & Hours</option>
-            <option value="1">KM & Miles</option>
+            <option value="1">Km & Miles</option>
           </select>
           <hr />
           {index === "xx" ? "Please select units" : null}
