--- a/index.html
+++ b/index.html
@@ -6,104 +6,32 @@
   <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
-    function MinutesToHours() {
-      const [amount, setAmount] = React.useState();
-      const [flipped, setFlipped] = React.useState(false);
-      const onChange = () => {
-        setAmount(event.target.value);
-      };
-      const reset = () => {
-        setAmount(0);
-      };
-      const onFlip = () => {
-        setFlipped((c) => !c);
-        reset();
-      };
-
-      return (
-        <div>
-          <label htmlFor="minutes">minutes</label>
-          <input
-            value={flipped ? amount * 60 : amount}
-            id="minutes"
-            placeholder="Minutes"
-            type="number"
-            onChange={onChange}
-            disabled={flipped}
-          />
-          <br />
-          <label htmlFor="hours">hours</label>
-          <input
-            value={flipped ? amount : Math.round(amount / 60)}
-            id="hours"
-            placeholder="Hours"
-            type="number"
-            onChange={onChange}
-            disabled={!flipped}
-          />
-          <div>
-            <button onClick={reset}>reset</button>
-            <button onClick={onFlip}>Filp</button>
-          </div>
-        </div>
-      );
+    function Btn({ text, onClick }){
+        return(<button
+         onClick={onClick}
+         style={{
+            backgroundColor: "tomato",
+            color: "white",
+            padding: "10px 20px",
+            border: 0,
+            borderRadius: 10,
+        }}>
+        {text}
+        </button>
+        )
     }
-    function KmToMiles() {
-      const [amount, setAmount] = React.useState();
-      const [flipped, setFlip] = React.useState(false);
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      };
-      const reset = () => setAmount(0);
-      const flip = () => {
-        setFlip((c) => !c);
-        reset();
-      };
-      return (
-        <div>
-          <label htmlFor="Km">Km</label>
-          <input
-            value={flipped ? amount * 1.609 : amount}
-            id="Km"
-            type="number"
-            placeholder="Km"
-            onChange={onChange}
-            disabled={flipped}
-          />
-          <br />
-          <label htmlFor="Miles">Miles</label>
-          <input
-            value={flipped ? amount : amount / 1.609}
-            id="Miles"
-            type="number"
-            placeholder="Miles"
-            onChange={onChange}
-            disabled={!flipped}
-          />
-          <br />
-          <button onClick={reset}>reset</button>
-          <button onClick={flip}>flip</button>
-        </div>
-      );
-    }
+    const MemorizedBtn = React.memo(Btn);
     function App() {
-      const [index, setIndex] = React.useState("xx");
-      const onSelect = (event) => {
-        setIndex(event.target.value);
-      };
+        const [value, setValue] = React.useState("Save Changes");
+        const changeValue = () => {
+            setValue("Revert Changes");
+        }
       return (
         <div>
-          <h1>Converter</h1>
-          <select value={index} onChange={onSelect}>
-            <option value="xx">Select your units!</option>
-            <option value="0">Minutes & Hours</option>
-            <option value="1">Km & Miles</option>
-          </select>
-          <hr />
-          {index === "xx" ? "Please select units" : null}
-          {index === "0" ? <MinutesToHours /> : null}
-          {index === "1" ? <KmToMiles /> : null}
+         <MemorizedBtn text={value} onClick={changeValue} />
+         <MemorizedBtn text="Continue" />
         </div>
       );
     }
